# chess24-pwned

./: .gitignore  .gitmodules  LICENSE  README.md
renderer/: Cargo.toml  rustfmt.toml
renderer/src/: board.rs  instr.rs  intrp.rs  main.rs  video.rs
scraper/: chapterScraper.js  courseScraper.js  index.js  package-lock.json  package.json  videoScraper.js
