[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
strip = false
codegen-units = 1
lto = "fat"

[dependencies]
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = { path = "./json" }
image = "0.25.0"
palette = "0.7.3"
indexmap = "2.1.0"
rayon = "1.8.1"
paste = "1.0.14"
once_cell = "1.19.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
